# deepslate-benchmarks

./: README.md  pyproject.toml
s2s/big-bench-audio/: README.md  evaluate.py  run_benchmark.py
