[project]
name = "deepslate-benchmarks"
version = "0.1.0"
description = "Deesplate benchmark repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic",
  "datasets<3",
  "deepslate-core",
  "jiwer",
  "librosa",
  "numpy",
  "openai",
  "soundfile",
  "tqdm",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["s2s"]
